syntax = "proto3";

package com.example.sample;

option java_multiple_files = true;
option java_package = "com.example.sample.proto";
option java_outer_classname = "SRequestProtos";

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3;
}
